...
}

class _HomeScreenState extends State<HomeScreen> {
  final List<Tournament> tournaments = [
    Tournament(
      title: "Kathmandu Futsal Cup 2025",
      location: "Kathmandu, Nepal",
      date: "Jan 1 - Jan 14, 2026",
      image: "assets/images/futsal.jpg",
    ),
    Tournament(
      title: "Pokhara Football League 2026",
      location: "Pokhara, Nepal",
...
